Rewritten load_history_from_csv.py to ensure unique key generation using rolling hashes. Some files and folders housekeeping.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,16 @@
             "program": "${file}"
         },
         {
+            "name": "Python: parameters",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "cwd": "D:/Git/Arbitron/data/history",
+            "args": [
+                "-f YoBit.ETH-USD.csv"
+            ]            
+        },        
+        {
             "name": "Python: Attach",
             "type": "python",
             "request": "attach",
