--- a/settings.ini
+++ b/settings.ini
@@ -3,7 +3,7 @@ user = cassandra
 password = cassandra
 port = 9042
 nodes = 127.0.0.1, 10.7.0.11, 10.7.0.20
-
+default_fetch_size = 200
 
 [pacemaker]
 nodes = 10.7.0.11, 127.0.0.1
