--- a/settings.ini
+++ b/settings.ini
@@ -3,7 +3,7 @@ user = cassandra
 password = cassandra
 port = 9042
 nodes = 127.0.0.1, 10.7.0.11, 10.7.0.20
-default_fetch_size = 200
+default_fetch_size = 2000
 
 [pacemaker]
 nodes = 10.7.0.11, 127.0.0.1
@@ -17,10 +17,12 @@ queue_name = pacemaker
 [logic]
 ; settings keyspace
 settings_keyspace = settings
+; data keyspace
+data_keyspace = arbitron
 ; table with custom exchanges
 exchanges = settings.exchanges
 ; table with exchanges-pairs
-pairs = settings.pairs
+pairs = settings.exchanges_pairs
 ; table with custom tokens
 tokens = settings.tokens
 ; table with active workers
