First test version with worker writes to Cassandra database

--- a/settings.ini
+++ b/settings.ini
@@ -19,6 +19,8 @@ queue_name = pacemaker
 settings_keyspace = settings
 ; data keyspace
 data_keyspace = arbitron
+; history table
+history_table = history
 ; table with custom exchanges
 exchanges = settings.exchanges
 ; table with exchanges-pairs
