First working proof-of-concept (buggy) versions of pacemaker/worker.

--- a/settings.ini
+++ b/settings.ini
@@ -21,15 +21,15 @@ settings_keyspace = settings
 data_keyspace = arbitron
 ; history table
 history_table = history
+; workers log table
+log = arbitron.log
+; table with active workers
+workers = arbitron.workers
 ; table with custom exchanges
 exchanges = settings.exchanges
 ; table with exchanges-pairs
 pairs = settings.exchanges_pairs
 ; table with custom tokens
 tokens = settings.tokens
-; table with active workers
-workers = temp.workers
-; workers log table
-log = temp.log
 ; time to live. Worker is assumed to be dead after expiration time, defined as [delay * ttl_factor] in sec.
 ttl_factor = 6 
