Logger, new settings, downgrading dispatching algorithm after some tests (worker is performing slower than expected with large jobs)

--- a/settings.ini
+++ b/settings.ini
@@ -23,6 +23,8 @@ data_keyspace = arbitron
 history_table = history
 ; workers log table
 log = arbitron.log
+; file for local logging
+log_local = arbitron.log
 ; table with active workers
 workers = arbitron.workers
 ; table with custom exchanges
@@ -31,5 +33,7 @@ exchanges = settings.exchanges
 pairs = settings.exchanges_pairs
 ; table with custom tokens
 tokens = settings.tokens
+; maximum number of pairs per single job
+job_max_pairs = 2
 ; time to live. Worker is assumed to be dead after expiration time, defined as [delay * ttl_factor] in sec.
 ttl_factor = 6 
