complete rewrite of history and order book for MSSQL 2017 using latest features like in-memory and temporal tables

--- a/settings.ini
+++ b/settings.ini
@@ -5,18 +5,26 @@ port = 9042
 nodes = 127.0.0.1, 10.7.0.11, 10.7.0.20
 default_fetch_size = 2000
 
+
 [pacemaker]
-nodes = 10.7.0.11, 127.0.0.1
-# port for getActiveWorkers. It uses http api of rabbitmq_management plugin:
-port = 15672  
+; rabbit_nodes
+nodes = pacemaker 
+; port for getActiveWorkers. It uses http api of rabbitmq_management plugin:
+; rabbit_port
+port = 15672
+; rabbit_user
 user = rabbit
+; rabbit_password
 password = rabbit
+; rabbit_queue_name
 queue_name = pacemaker
 
 
 [logic]
 ; settings keyspace
 settings_keyspace = settings
+; settings table
+settings_table = settings
 ; data keyspace
 data_keyspace = arbitron
 ; history table
@@ -28,12 +36,12 @@ log_local = arbitron.log
 ; table with active workers
 workers = arbitron.workers
 ; table with custom exchanges
-exchanges = settings.exchanges
+exchanges = arbitron.exchanges
 ; table with exchanges-pairs
-pairs = settings.exchanges_pairs
+pairs = arbitron.exchanges_pairs
 ; table with custom tokens
-tokens = settings.tokens
+tokens = arbitron.tokens
 ; maximum number of pairs per single job
 job_max_pairs = 2
 ; time to live. Worker is assumed to be dead after expiration time, defined as [delay * ttl_factor] in sec.
-ttl_factor = 6 
+ttl_factor = 6
